--- a/WebShop.API/index.html
+++ b/WebShop.API/index.html
@@ -29,7 +29,7 @@
 
                 </ul>
                 <ul class="nav navbar-nav pull-right">
-                    <li><a href="">Logg inn</a></li>
+                    <li><a href="/#/login">Logg inn</a></li>
                 </ul>
             </div>
         </div>
