--- a/WebShop.API/index.html
+++ b/WebShop.API/index.html
@@ -25,8 +25,8 @@
                         <li><a href="#">HANDLEKURV</a></li>
                         <li><a href="#">KONTAKT OSS</a></li>
                         <li class="last" ng-controller="LoginController">
-                            <button ng-hide="isLoggedIn" ng-click="login" title="Login"></button>
-                            <button ng-show="isLoggedIn" ng-click="logout" title="Logout"></button>
+                            <a ng-hide="isLoggedIn" href="javascript:void(0)" ng-click="login">LOGIN</a>
+                            <a ng-show="isLoggedIn" ng-click="logout">LOGOUT</a>
                         </li>
                     </ul>
                 </div>
