--- a/WebShop.API/index.html
+++ b/WebShop.API/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="Content/style.css" type="text/css" media="all" />
     <!--[if lte IE 6]><style type="text/css" media="screen">.tabbed { height:420px; }</style><![endif]-->
-    <script src="Scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
+    <script src="Scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="Scripts/jquery.jcarousel.pack.js" type="text/javascript"></script>
     <script src="Scripts/jquery.slide.js" type="text/javascript"></script>
     <script src="Scripts/jquery-func.js" type="text/javascript"></script>
@@ -19,10 +19,10 @@
                 <!--<h1 id="logo"><a href="#">SHOEBALOO</a></h1>-->
                 <div id="navigation">
                     <ul>
-                        <li><a href="#">HJEM</a></li>
+                        <li><a href="/#/">HJEM</a></li>
                         <li><a href="#">HJELP</a></li>
                         <li><a href="#">MIN SIDE</a></li>
-                        <li><a href="#">HANDLEKURV</a></li>
+                        <li><a href="/#/cart">HANDLEKURV</a></li>
                         <li><a href="#">KONTAKT OSS</a></li>
                         <li class="last" ng-controller="LoginController">
                             <a ng-hide="isLoggedIn" ng-click="login()">LOGIN</a>
@@ -64,7 +64,7 @@
                     </form>
                 </div>
                 <span class="left"><a href="#">Avansert søk</a></span>
-                <div class="right"> <span class="cart" ng-controller="ShoppingCartController"> <a href="#" class="cart-ico">&nbsp;</a> <strong> {{total | currency:'NOK ':0}}</strong> </span> <span class="left more-links"> <a href="#">Handlekurv</a></span> </div>
+                <div class="right"> <span class="cart" ng-controller="ShoppingCartController"> <a href="/#/cart" class="cart-ico">&nbsp;</a> <strong> {{total | currency:'NOK ':0}}</strong> </span> <span class="left more-links"> <a href="/#/cart">Handlekurv</a></span> </div>
             </div>
             <!-- End Search, etc -->
             <!-- Content -->
@@ -79,8 +79,10 @@
     <!-- End Main -->
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
+    <script src="Scripts/i18n/angular-locale_nb-no.js"></script>
     <script src="Scripts/angular/main.js"></script>
     <script src="Scripts/angular/shoppingCart.js"></script>
+    <script src="Scripts/angular/cart.js"></script>
     <script src="Scripts/angular/factories.js"></script>
     <script src="Scripts/angular/root.js"></script>
     <script src="Scripts/angular/item.js"></script>
