--- a/WebShop.API/index.html
+++ b/WebShop.API/index.html
@@ -77,6 +77,7 @@
         </div>
     </div>
     <!-- End Main -->
+    <script src="Scripts/require.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
     <script src="Scripts/i18n/angular-locale_nb-no.js"></script>
@@ -87,6 +88,8 @@
     <script src="Scripts/angular/root.js"></script>
     <script src="Scripts/angular/item.js"></script>
     <script src="Scripts/angular/login.js"></script>
+    <script src="Scripts/angular/shipping.js"></script>
+    <script src="Scripts/angular/payment.js"></script>
 </body>
 </html>
 
